--- a/local/soda-config/config.yaml
+++ b/local/soda-config/config.yaml
@@ -1,41 +1,4 @@
-data_source soda_dataset:
+data_source lps_api_dataset:
   type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: soda_dataset
-
-data_source sykepengesoknad_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: sykepengesoknad_datastream
-
-data_source flex_sykmeldinger_backend_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: flex_sykmeldinger_backend_datastream
-
-data_source spinnsyn_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: spinnsyn_datastream
-
-data_source arkivering_oppgave_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: arkivering_oppgave_datastream
-
-data_source flexjar_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: flexjar_datastream
-
-data_source spinnsyn_arkivering_datastream:
-  type: bigquery
-  connection:
-    project_id: flex-prod-af40
-    dataset: spinnsyn_arkivering_datastream
+  project_id: helsearbeidsgiver-dev-6d06
+  dataset: lps_api_dataset
