--- a/nais/soda-config.yaml
+++ b/nais/soda-config.yaml
@@ -2,41 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: soda-config
-  namespace: flex
+  namespace: helsearbeidsgiver
 data:
   config.yaml: |
-    data_source soda_dataset:
+    data_source lps_api_dataset:
       type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: soda_dataset
-    data_source sykepengesoknad_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: sykepengesoknad_datastream
-    data_source flex_sykmeldinger_backend_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: flex_sykmeldinger_backend_datastream
-    data_source spinnsyn_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: spinnsyn_datastream
-    data_source arkivering_oppgave_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: arkivering_oppgave_datastream
-    data_source flexjar_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: flexjar_datastream
-    data_source spinnsyn_arkivering_datastream:
-      type: bigquery
-      connection:
-        project_id: {{ gcp.project_id }}
-        dataset: spinnsyn_arkivering_datastream
+      project_id: helsearbeidsgiver-dev-6d06
+      dataset: lps_api_dataset
