--- a/nais/soda-checks-dev.yaml
+++ b/nais/soda-checks-dev.yaml
@@ -4,7 +4,7 @@ metadata:
   name: soda-checks
   namespace: helsearbeidsgiver
 data:
-  soda_dataset.yaml: |
+  lps_api_dataset.yaml: |
     checks for public_inntektsmelding:
       - row_count = 0:
           filter: status = 'MOTTATT' AND mottatt_event < TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 65 MINUTE)
